--- a/Documents/e-kayseri/src/index.html
+++ b/Documents/e-kayseri/src/index.html
@@ -11,7 +11,7 @@
   <!-- Compiled and minified JavaScript -->
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round|Material+Icons+Outlined" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
